| Summary: | ASTERISK-26179: chan_sip: Second T.38 request fails | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2016-07-07 10:22:51 | Date Closed: | 2016-07-08 12:54:51 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/T.38 |
| Versions: | 11.21.2 13.9.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Some T.38 implementations may send another re-invite after the initial one which add additional negotiation details (such as the max bitrate). Currently this will fail when passthrough is being done as we do nothing if T.38 is already active.
We should more gracefully handle this scenario. | ||
| Comments: | |||